# alluxio-common-lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
apps/: CMakeLists.txt  app.cpp
include/alluxio_lib/: lib.hpp
include/lib/: AlluxioClientConfig.h  ConsistentHashProvider.h  client.h
src/: CMakeLists.txt  ConsistentHashProvider.cpp  client.cpp  lib.cpp
tests/: CMakeLists.txt  testlib.cpp
